--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon index -babel-node -presets=env"
   },
   "author": "",
   "license": "ISC",
@@ -26,12 +26,8 @@
     "css-loader": "^0.28.5",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
-    "extract-text-webpack-plugin": "^1.0.1",
     "fetch-base64": "^2.0.0",
-    "fs": "0.0.1-security",
-    "imageurl-base64": "^1.0.0",
     "lodash": "^4.17.4",
-    "material-ui": "^0.19.0",
     "moment": "^2.18.1",
     "mongojs": "^2.4.1",
     "mongoose": "^4.11.6",
@@ -41,33 +37,16 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.1.0",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
-    "react-bootstrap-validation": "^0.1.11",
-    "react-combo-box": "^1.0.0",
     "react-datepicker": "^0.53.0",
     "react-dom": "^15.6.1",
-    "react-fileupload": "^2.4.0",
-    "react-input-enhancements": "^0.5.4",
-    "react-mdl-datepicker": "^1.0.0",
-    "react-native-material-dropdown": "^0.3.1",
     "react-number-format": "^2.0.3",
     "react-paginate": "^4.4.3",
     "react-router": "^3.0.0",
-    "react-s3-upload": "^0.1.6",
-    "react-s3-uploader": "^4.3.0",
-    "react-select": "^1.0.0-rc.5",
-    "react-tags-input": "^0.1.0",
     "react-tagsinput": "^3.17.0",
     "serve-favicon": "^2.4.3",
     "style-loader": "^0.18.2",
     "underscore": "^1.8.3",
     "validator": "^8.0.0",
-    "webpack": "^1.14.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-middleware": "^1.5.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0",
-    "react-hot-loader": "^1.3.1"
+    "webpack": "^1.14.0"
   }
 }
