--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.5",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "fetch-base64": "^2.0.0",
@@ -48,5 +49,10 @@
     "underscore": "^1.8.3",
     "validator": "^8.0.0",
     "webpack": "^1.14.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.5.3"
   }
 }
