--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "classnames": "^2.2.5",
     "css-loader": "^0.28.5",
